--- a/index.html
+++ b/index.html
@@ -30,16 +30,7 @@
         import { initializeApp } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js";
         import { getFirestore, collection, addDoc } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-firestore.js";
         import { getStorage, ref, uploadBytes, getDownloadURL } from "https://www.gstatic.com/firebasejs/10.7.1/firebase-storage.js";
-
-        const firebaseConfig = {
-            apiKey: "AIzaSyCR9EPwlakRDXN1v6Rm19ro7XvowvBnY2k",
-            authDomain: "jpns-ereport.firebaseapp.com",
-            projectId: "jpns-ereport",
-            storageBucket: "jpns-ereport.firebasestorage.app",
-            messagingSenderId: "928703430086",
-            appId: "1:928703430086:web:273fc8a67f22ce1b9e86c7",
-            measurementId: "G-ZD4CJQQ5D2"
-        };
+        import { firebaseConfig } from './config.js';
 
         const app = initializeApp(firebaseConfig);
         const db = getFirestore(app);
