added description box

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,28 +1,37 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 
 <head>
-    <title>JPNS-eReport Dashboard</title>
+    <meta charset="UTF-8">
+    <title>JPNS-eReport - Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-gray-100 p-6">
     <div class="max-w-6xl mx-auto">
         <div class="flex flex-col md:flex-row justify-between items-center mb-10 gap-4">
-            <h1 class="text-3xl font-black text-blue-900">JPNS-eReport Dashboard</h1>
-            <div class="flex gap-4">
-                <select id="filterUnit" class="p-2 border rounded-lg bg-white shadow-sm">
+            <div>
+                <h1 class="text-3xl font-black text-blue-900 italic">JPNS-eReport</h1>
+                <p class="text-gray-500">Activity Monitoring Dashboard</p>
+            </div>
+
+            <div class="flex gap-4 items-center">
+                <label class="text-sm font-bold text-gray-600">Filter:</label>
+                <select id="filterUnit"
+                    class="p-2 border rounded-lg bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400">
                     <option value="All">All Units</option>
-                    <option value="Unit A">Unit A</option>
-                    <option value="Unit B">Unit B</option>
-                    <option value="Unit C">Unit C</option>
+                    <option value="Academic Unit">Academic Unit</option>
+                    <option value="Student Affairs Unit">Student Affairs Unit</option>
+                    <option value="Management Unit">Management Unit</option>
+                    <option value="ICT Unit">ICT Unit</option>
                 </select>
-                <a href="index.html" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700 font-bold">Add
-                    New +</a>
+                <a href="index.html"
+                    class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 font-bold shadow-md">+ New
+                    Report</a>
             </div>
         </div>
 
-        <div id="gallery" class="grid grid-cols-1 md:grid-cols-3 gap-6">
+        <div id="gallery" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
         </div>
     </div>
 
@@ -36,8 +45,7 @@
             projectId: "jpns-ereport",
             storageBucket: "jpns-ereport.firebasestorage.app",
             messagingSenderId: "928703430086",
-            appId: "1:928703430086:web:273fc8a67f22ce1b9e86c7",
-            measurementId: "G-ZD4CJQQ5D2"
+            appId: "1:928703430086:web:273fc8a67f22ce1b9e86c7"
         };
 
         const app = initializeApp(firebaseConfig);
@@ -45,23 +53,34 @@
         const gallery = document.getElementById('gallery');
         const filter = document.getElementById('filterUnit');
 
-        // Real-time listener for reports
         const q = query(collection(db, "reports"), orderBy("createdAt", "desc"));
 
         onSnapshot(q, (snapshot) => {
             const allDocs = snapshot.docs.map(d => ({ id: d.id, ...d.data() }));
 
             const render = (dataList) => {
+                if (dataList.length === 0) {
+                    gallery.innerHTML = '<p class="text-gray-400 italic col-span-full text-center py-10">No reports found for this unit.</p>';
+                    return;
+                }
+
                 gallery.innerHTML = dataList.map(item => `
-                    <div class="bg-white rounded-lg shadow-md overflow-hidden relative group">
-                        <img src="${item.imageUrl || 'https://via.placeholder.com/300'}" class="w-full h-48 object-cover">
-                        <div class="p-4">
-                            <span class="text-xs font-bold text-blue-600 uppercase">${item.unit}</span>
-                            <h3 class="font-bold text-lg text-slate-800">${item.program}</h3>
-                            <p class="text-sm text-gray-500">${item.date} | By: ${item.name}</p>
-                            
-                            <button onclick="deleteReport('${item.id}')" class="mt-4 text-red-500 text-xs font-semibold hover:underline">
-                                Delete Report
+                    <div class="bg-white rounded-xl shadow-md overflow-hidden border border-gray-200 flex flex-col">
+                        <img src="${item.imageUrl || 'https://via.placeholder.com/400x250?text=No+Image'}" class="w-full h-52 object-cover">
+                        <div class="p-5 flex-grow">
+                            <div class="flex justify-between items-start mb-2">
+                                <span class="text-[10px] font-bold text-blue-600 bg-blue-50 px-2 py-1 rounded-md uppercase tracking-wider">${item.unit}</span>
+                                <span class="text-[11px] text-gray-400 font-medium">${item.date}</span>
+                            </div>
+                            <h3 class="font-bold text-xl text-slate-800 leading-tight mb-2">${item.program}</h3>
+                            <p class="text-sm text-gray-600 leading-relaxed mb-4 line-clamp-4 bg-slate-50 p-2 rounded">
+                                ${item.description || "No description provided."}
+                            </p>
+                        </div>
+                        <div class="p-4 bg-gray-50 border-t flex justify-between items-center">
+                            <span class="text-xs text-gray-500 font-medium italic">By: ${item.name}</span>
+                            <button onclick="deleteReport('${item.id}')" class="text-red-500 text-xs font-bold hover:bg-red-50 px-2 py-1 rounded transition">
+                                Delete
                             </button>
                         </div>
                     </div>
@@ -76,9 +95,8 @@
             };
         });
 
-        // Global function to delete a report
         window.deleteReport = async (id) => {
-            if (confirm("Are you sure you want to delete this report?")) {
+            if (confirm("Permanently delete this report?")) {
                 await deleteDoc(doc(db, "reports", id));
             }
         };
