changed the unit names again to be more general

--- a/dashboard.html
+++ b/dashboard.html
@@ -41,10 +41,10 @@
                 <select id="filterUnit"
                     class="p-2 border rounded-lg bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400">
                     <option value="All">All Units</option>
-                    <option value="Academic Unit">Academic Unit</option>
-                    <option value="Student Affairs Unit">Student Affairs Unit</option>
-                    <option value="Management Unit">Management Unit</option>
-                    <option value="ICT Unit">ICT Unit</option>
+                    <option value="Unit A">Unit A</option>
+                    <option value="Unit B">Unit B</option>
+                    <option value="Unit C">Unit C</option>
+                    <option value="Unit D">Unit D</option>
                 </select>
                 <a href="index.html"
                     class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 font-bold shadow-md">+ New</a>
