--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
                 class="w-full p-2 border rounded focus:ring-2 focus:ring-blue-400 outline-none">
 
             <select id="unit" class="w-full p-2 border rounded bg-white">
-                <option value="Academic Unit">Academic Unit</option>
-                <option value="Student Affairs Unit">Student Affairs Unit</option>
-                <option value="Management Unit">Management Unit</option>
-                <option value="ICT Unit">ICT Unit</option>
+                <option value="Unit A">Unit A</option>
+                <option value="Unit B">Unit B</option>
+                <option value="Unit C">Unit C</option>
+                <option value="Unit D">Unit D</option>
             </select>
 
             <input type="date" id="programDate" required class="w-full p-2 border rounded">
