--- a/index.html
+++ b/index.html
@@ -3,32 +3,40 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JPNS-eReport - Submit</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="bg-slate-100 p-4 md:p-8">
-    <div class="max-w-lg mx-auto bg-white p-8 rounded-xl shadow-lg">
+    <div class="max-w-xl mx-auto bg-white p-8 rounded-xl shadow-lg">
         <h2 class="text-2xl font-bold mb-6 text-blue-800 border-b pb-2">New Activity Report</h2>
 
         <form id="reportForm" class="space-y-4">
-            <input type="text" id="userName" placeholder="Reporter Name" required
-                class="w-full p-2 border rounded focus:ring-2 focus:ring-blue-400 outline-none">
-            <input type="text" id="programName" placeholder="Program/Activity Title" required
-                class="w-full p-2 border rounded focus:ring-2 focus:ring-blue-400 outline-none">
+            <div class="grid grid-cols-2 gap-4">
+                <input type="text" id="userName" placeholder="Reporter Name" required
+                    class="p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400">
+                <input type="date" id="programDate" required
+                    class="p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400">
+            </div>
 
-            <select id="unit" class="w-full p-2 border rounded bg-white">
+            <input type="text" id="programName" placeholder="Program/Activity Title" required
+                class="w-full p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400">
+
+            <select id="unit" class="w-full p-2 border rounded bg-white outline-none focus:ring-2 focus:ring-blue-400">
                 <option value="Unit A">Unit A</option>
                 <option value="Unit B">Unit B</option>
                 <option value="Unit C">Unit C</option>
                 <option value="Unit D">Unit D</option>
             </select>
 
-            <input type="date" id="programDate" required class="w-full p-2 border rounded">
+            <textarea id="description" rows="2" placeholder="Short Summary (for Dashboard)"
+                class="w-full p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400"></textarea>
 
-            <textarea id="description" rows="3" placeholder="Briefly describe the activity highlights..."
-                class="w-full p-2 border rounded focus:ring-2 focus:ring-blue-400 outline-none"></textarea>
+            <textarea id="objective" rows="2" placeholder="Program Objective(s)"
+                class="w-full p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400"></textarea>
+
+            <textarea id="fullReport" rows="5" placeholder="Detailed Report Content"
+                class="w-full p-2 border rounded outline-none focus:ring-2 focus:ring-blue-400"></textarea>
 
             <div class="bg-blue-50 p-4 rounded-lg border-2 border-dashed border-blue-200">
                 <label class="block text-sm font-bold text-blue-700 mb-2">Upload Program Photos (Multiple)</label>
@@ -37,13 +45,12 @@
             </div>
 
             <button type="submit" id="btn"
-                class="w-full bg-blue-600 text-white py-3 rounded-lg font-bold hover:bg-blue-700 transition shadow-lg">Upload
-                Report</button>
+                class="w-full bg-blue-600 text-white py-3 rounded-lg font-bold hover:bg-blue-700 transition shadow-lg">Submit
+                Full Report</button>
         </form>
 
         <div class="mt-6 text-center">
-            <a href="dashboard.html" class="text-blue-600 hover:underline text-sm font-medium">← View All Reports
-                (Dashboard)</a>
+            <a href="dashboard.html" class="text-blue-600 hover:underline text-sm font-medium">← View Dashboard</a>
         </div>
     </div>
 
@@ -69,14 +76,10 @@
             e.preventDefault();
             const btn = document.getElementById('btn');
             const files = document.getElementById('imageUpload').files;
-
-            btn.disabled = true;
-            btn.innerText = `Uploading ${files.length} images...`;
+            btn.disabled = true; btn.innerText = "Processing Uploads...";
 
             let urls = [];
-
             try {
-                // Loop through multiple files
                 for (let i = 0; i < files.length; i++) {
                     const sRef = ref(storage, `images/${Date.now()}_${files[i].name}`);
                     await uploadBytes(sRef, files[i]);
@@ -90,17 +93,18 @@
                     unit: document.getElementById('unit').value,
                     date: document.getElementById('programDate').value,
                     description: document.getElementById('description').value,
+                    objective: document.getElementById('objective').value,
+                    fullReport: document.getElementById('fullReport').value,
                     imageUrls: urls,
                     createdAt: new Date()
                 });
 
-                alert("Success! Report saved with " + urls.length + " images.");
-                location.reload();
+                alert("Report and " + urls.length + " images submitted!");
+                location.href = "dashboard.html";
             } catch (err) {
                 console.error(err);
-                alert("Upload failed. Try smaller images.");
+                alert("Upload failed.");
                 btn.disabled = false;
-                btn.innerText = "Upload Report";
             }
         });
     </script>
