--- a/dashboard.html
+++ b/dashboard.html
@@ -5,56 +5,25 @@
     <meta charset="UTF-8">
     <title>JPNS-eReport - Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
-    <style>
-        @media print {
-            .no-print {
-                display: none !important;
-            }
-
-            body {
-                background: white;
-            }
-
-            .report-card {
-                break-inside: avoid;
-                border: 1px solid #eee;
-                margin-bottom: 2rem;
-                box-shadow: none !important;
-            }
-
-            .gallery-grid {
-                grid-template-columns: repeat(2, 1fr) !important;
-            }
-        }
-    </style>
 </head>
 
 <body class="bg-gray-100 p-6">
     <div class="max-w-6xl mx-auto">
-        <div class="flex flex-col md:flex-row justify-between items-center mb-10 gap-4 no-print">
-            <div>
-                <h1 class="text-3xl font-black text-blue-900 italic">JPNS-eReport</h1>
-                <p class="text-gray-500">Activity Monitoring Dashboard</p>
-            </div>
-
-            <div class="flex gap-4 items-center">
-                <select id="filterUnit"
-                    class="p-2 border rounded-lg bg-white shadow-sm outline-none focus:ring-2 focus:ring-blue-400">
+        <div class="flex flex-col md:flex-row justify-between items-center mb-10 gap-4">
+            <h1 class="text-3xl font-black text-blue-900 italic">JPNS-eReport</h1>
+            <div class="flex gap-4">
+                <select id="filterUnit" class="p-2 border rounded-lg bg-white shadow-sm outline-none">
                     <option value="All">All Units</option>
-                    <option value="Unit A">Unit A</option>
-                    <option value="Unit B">Unit B</option>
-                    <option value="Unit C">Unit C</option>
-                    <option value="Unit D">Unit D</option>
+                    <option value="Academic Unit">Academic Unit</option>
+                    <option value="Student Affairs Unit">Student Affairs Unit</option>
+                    <option value="Management Unit">Management Unit</option>
+                    <option value="ICT Unit">ICT Unit</option>
                 </select>
-                <a href="index.html"
-                    class="bg-blue-600 text-white px-4 py-2 rounded-lg hover:bg-blue-700 font-bold shadow-md">+ New</a>
-                <button onclick="window.print()"
-                    class="bg-slate-700 text-white px-4 py-2 rounded-lg font-bold">Print/PDF</button>
+                <a href="index.html" class="bg-blue-600 text-white px-4 py-2 rounded-lg font-bold">+ New</a>
             </div>
         </div>
 
-        <div id="gallery" class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        </div>
+        <div id="gallery" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6"></div>
     </div>
 
     <script type="module">
@@ -81,53 +50,24 @@
             const allDocs = snapshot.docs.map(d => ({ id: d.id, ...d.data() }));
 
             const render = (dataList) => {
-                if (dataList.length === 0) {
-                    gallery.innerHTML = '<p class="col-span-full text-center text-gray-400 py-10 italic">No reports found.</p>';
-                    return;
-                }
-
-                gallery.innerHTML = dataList.map(item => {
-                    const imgs = item.imageUrls || [];
-                    const imageGrid = imgs.map(url => `
-                        <img src="${url}" class="w-full h-32 object-cover rounded-lg border shadow-sm cursor-zoom-in" onclick="window.open('${url}')">
-                    `).join('');
-
-                    const downloadLinks = imgs.map((url, idx) => `
-                        <a href="${url}" target="_blank" class="text-[10px] bg-green-50 text-green-700 border border-green-200 px-2 py-1 rounded hover:bg-green-100 transition">Img ${idx + 1} ↓</a>
-                    `).join('');
-
-                    return `
-                        <div class="bg-white rounded-2xl shadow-sm border border-gray-200 p-6 report-card flex flex-col">
-                            <div class="flex justify-between items-start mb-4">
-                                <div>
-                                    <span class="text-[10px] font-bold text-blue-600 bg-blue-50 px-2 py-1 rounded uppercase tracking-widest">${item.unit}</span>
-                                    <h3 class="font-bold text-2xl text-slate-800 mt-2 leading-tight">${item.program}</h3>
-                                </div>
-                                <span class="text-xs font-medium text-gray-400">${item.date}</span>
-                            </div>
-
-                            <p class="text-sm text-gray-600 mb-6 leading-relaxed bg-slate-50 p-3 rounded-xl border border-slate-100">
-                                ${item.description || "No description provided."}
-                            </p>
-
-                            <div class="grid grid-cols-3 gap-2 mb-6 gallery-grid">
-                                ${imageGrid}
-                            </div>
-
-                            <div class="mt-auto pt-4 border-t flex flex-wrap items-center gap-2 no-print">
-                                <span class="text-xs text-gray-400 italic mr-auto">By: ${item.name}</span>
-                                <div class="flex gap-1">
-                                    ${downloadLinks}
-                                </div>
-                                <button onclick="deleteReport('${item.id}')" class="text-red-400 hover:text-red-600 text-xs font-bold ml-2">Delete</button>
-                            </div>
+                gallery.innerHTML = dataList.map(item => `
+                    <div class="bg-white rounded-xl shadow-md overflow-hidden border border-gray-200 flex flex-col">
+                        <img src="${item.imageUrls?.[0] || 'https://via.placeholder.com/300'}" class="w-full h-48 object-cover">
+                        <div class="p-4">
+                            <span class="text-[10px] font-bold text-blue-600 uppercase">${item.unit}</span>
+                            <h3 onclick="window.location.href='view-report.html?id=${item.id}'" class="font-bold text-lg text-slate-800 cursor-pointer hover:text-blue-600 transition truncate">${item.program}</h3>
+                            <p class="text-sm text-gray-500 mb-3">${item.date}</p>
+                            <p class="text-sm text-gray-600 line-clamp-2 italic">"${item.description || 'No summary'}"</p>
                         </div>
-                    `;
-                }).join('');
+                        <div class="mt-auto p-4 bg-gray-50 border-t flex justify-between">
+                            <span class="text-[10px] text-gray-400">By: ${item.name}</span>
+                            <button onclick="deleteReport('${item.id}')" class="text-red-500 text-[10px] font-bold uppercase">Delete</button>
+                        </div>
+                    </div>
+                `).join('');
             };
 
             render(allDocs);
-
             filter.onchange = () => {
                 const filtered = filter.value === "All" ? allDocs : allDocs.filter(d => d.unit === filter.value);
                 render(filtered);
@@ -135,9 +75,7 @@
         });
 
         window.deleteReport = async (id) => {
-            if (confirm("Permanently delete this report and images?")) {
-                await deleteDoc(doc(db, "reports", id));
-            }
+            if (confirm("Delete this report?")) await deleteDoc(doc(db, "reports", id));
         };
     </script>
 </body>
