--- a/index.html
+++ b/index.html
@@ -52,6 +52,12 @@
         <div class="mt-6 text-center">
             <a href="dashboard.html" class="text-blue-600 hover:underline text-sm font-medium">← View Dashboard</a>
         </div>
+
+        <div id="progressContainer" class="hidden w-full bg-gray-200 rounded-full h-4 mb-4">
+            <div id="progressBar"
+                class="bg-blue-600 h-4 rounded-full text-[10px] text-white text-center leading-4 font-bold transition-all duration-300"
+                style="width: 0%">0%</div>
+        </div>
     </div>
 
     <script type="module">
